--- a/style.css
+++ b/style.css
@@ -9,26 +9,30 @@
 .inacap-titulo {
     font-size: 40px;
     color: black;
+    padding: 20px 0px 30px 0px;
 
 }
 
 .inacap_container_img {
-    position: fixed;
-    top: 0; 
-    left: 0; 
-    width: 100vw; 
-    height: auto; 
+    width: 100%;
+    height: 550px;
 
-    
 }
 
 .inacap_container_img img {
-    width: 300px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+}
+
+.inacap_container_wrapper{
+    max-width: 1140px;
+    width: 100%;
+    margin: auto;
 }
 .inacap-parrafo{
     color: black;
+    padding: 0px 10px;
 }
 .inacap-container-link{
     display: flex;
