--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: Arial, sans-serif;
+    background-color: #f5f5dc;
+    margin: 0;
+    padding: 20px;
 }
 
 
@@ -25,16 +29,18 @@
     object-fit: cover;
 }
 
-.inacap_container_wrapper{
+.inacap_container_wrapper {
     max-width: 1140px;
     width: 100%;
     margin: auto;
 }
-.inacap-parrafo{
+
+.inacap-parrafo {
     color: black;
     padding: 0px 10px;
 }
-.inacap-container-link{
+
+.inacap-container-link {
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
@@ -42,14 +48,10 @@
     gap: 1rem;
 
 }
-.inacap-item{
+
+.inacap-item {
     width: 50px;
     height: 50px;
     background-color: white;
     cursor: pointer;
 }
-
-
-
-
-
